# vpn_final_project

./: .gitignore  CMakeLists.txt  roadmap.md  test_openssl.cpp  vcpkg.json
client_build/: client_main.cpp
include/client/: client.h  client_main.h
include/network/: network_adapter.h  tun_interface.h
include/openvpn/crypto/: SSL_type.h  data_channel.h  handshake.h  key_manager.h  ssl_context.h
include/openvpn/protocol/: control_channel.h  openvpn_packet.h
include/openvpn/transport/: tcp_transport.h  transport_factory.h  udp_transport.h
include/server/: server.h  server_main.h
include/utils/: config.h  logger.h
server_build/: server_main.cpp
src/: main.cpp
src/client/: client.cpp  vpn_client.cpp
src/network/: network_adapter.cpp  tun_interface.cpp
src/openvpn/crypto/: SSL_type.cpp  data_channel.cpp  handshake.cpp  key_manager.cpp  ssl_context.cpp
src/openvpn/protocol/: control_channel.cpp  openvpn_packet.cpp
src/openvpn/transport/: tcp_transport.cpp  transport_factory.cpp  udp_transport.cpp
src/server/: connection_manager.cpp  server.cpp
src/utils/: config.cpp  config_parser.cpp  config_parser.h  logger.cpp
